tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.fs(66,26): error FS1147: This number is outside the allowable range for 32-bit signed integers

/workspace/mochi/tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.fs(113,13): warning FS0046: The identifier 'params' is reserved for future use by F#

/workspace/mochi/tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.fs(115,25): warning FS0046: The identifier 'params' is reserved for future use by F#

/workspace/mochi/tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.fs(116,19): warning FS0046: The identifier 'params' is reserved for future use by F#

/workspace/mochi/tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.fs(117,19): warning FS0046: The identifier 'params' is reserved for future use by F#

/workspace/mochi/tests/rosetta/transpiler/FS/first-power-of-2-that-has-leading-decimal-digits-of-12.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'First-power-of-2-that-has-leading-decimal-digits-of-12' based on the file name 'first-power-of-2-that-has-leading-decimal-digits-of-12.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.
